# BaluPi

./: .env.example  .gitignore  BALUPI_PLAN.md  CLAUDE.md  README.md  TODO.md  balupi-implementation.md  balupi-plan.md  index.html  kill_dev.py  pi_setup.md  start_dev.py  sync_frontend.py
.claude/: CLAUDE.local.md
assets/: Dashboard--RMqcqDY.js  Dashboard-1tHFbHkZ.js  Dashboard-2sU4zipq.js  Dashboard-7pe_pzzL.js  Dashboard-B-ACP11E.js  Dashboard-B2TD4r5U.js  Dashboard-B7E0YAeT.js  Dashboard-B7kQe7eE.js  Dashboard-B8bMcSuP.js  Dashboard-B9QMPQHb.js  Dashboard-BCj3Bfio.js  (+1092 more)
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  cache.py  energy.py  files.py  handshake.py  health.py  nas.py  snapshot.py  system.py  tapo.py
backend/app/models/: __init__.py  cached_file.py  conflict.py  energy.py  file_metadata.py  server.py  sync_log.py  tapo_device.py  upload_queue.py  user.py
backend/app/schemas/: __init__.py  auth.py  cache.py  energy.py  files.py  sync.py  system.py  tapo.py
backend/app/services/: __init__.py  dns_service.py  energy_service.py  heartbeat_service.py  nas_detection_service.py  nas_state_machine.py  scheduler.py  tapo_service.py
backend/app/utils/: hashing.py  storage.py  wol.py
backend/tests/: conftest.py  test_auth_offline.py  test_dns_service.py  test_energy_service.py  test_handshake.py  test_health.py  test_heartbeat.py  test_nas_detection.py  test_nas_routes.py  test_state_machine.py  test_system.py  test_tapo_service.py
(+8 files in other folders)
