[project]
name = "balupi"
version = "0.1.0"
description = "Smart Cache & Energy Monitor for BaluHost NAS (Raspberry Pi)"
authors = [{ name = "Xveyn" }]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.25,<3.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "httpx>=0.26.0,<1.0.0",
    "python-kasa>=0.7.0,<1.0.0",
    "zeroconf>=0.131.0,<1.0.0",
    "psutil>=5.9.0,<6.0.0",
    "apscheduler>=3.10.0,<4.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "aiofiles>=23.2.0,<24.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
balupi = "app.main:run"

[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "data*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
